# regime-flow

./: .clang-tidy  .dockerignore  .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  index.html  mkdocs.yml  progress.md  pyproject.toml  pytest.ini  sitemap.xml  vcpkg.json
examples/custom_regime_ensemble/: CMakeLists.txt  README.md  config.yaml  run_backtest.cpp
examples/plugins/custom_regime/: CMakeLists.txt  README.md  custom_regime_detector.cpp  custom_regime_detector.h  custom_regime_strategy.cpp  custom_regime_strategy.h
examples/plugins/data_source_template/: CMakeLists.txt  README.md  data_source_template.cpp
examples/plugins/metrics_template/: CMakeLists.txt  README.md  metrics_template.cpp
examples/plugins/regime_detector_template/: CMakeLists.txt  README.md  regime_detector_template.cpp
examples/plugins/risk_manager_template/: CMakeLists.txt  README.md  risk_manager_template.cpp
examples/plugins/transformer_regime/: CMakeLists.txt  README.md  transformer_regime_detector.cpp  transformer_regime_detector.h  transformer_torchscript_detector.cpp  transformer_torchscript_detector.h
packaging/vcpkg-consumer/: CMakeLists.txt  main.cpp  vcpkg.json
python/: CMakeLists.txt  README.md  bindings.cpp  pyproject.toml  pytest.ini
python/cli/: index.html
python/overview/: index.html
python/regimeflow/: __init__.py  _bootstrap.py  _core.py  cli.py  config.py
python/regimeflow/analysis/: __init__.py  metrics.py  notebook.py  numpy_utils.py  reporting.py
python/regimeflow/data/: __init__.py  loaders.py  pandas_utils.py  preprocessing.py
python/regimeflow/metrics/: __init__.py  validation.py
python/regimeflow/research/: __init__.py  session.py
python/regimeflow/strategy/: __init__.py
python/regimeflow/visualization/: __init__.py  charts.py  dashboard.py  dashboard_app.py  live_dashboard_entry.py
python/tests/: conftest.py  test_bindings_core.py  test_cli.py  test_config_module.py  test_order_tif.py  test_pandas_utils.py  test_research_session.py  test_visualization_module.py
python/workflow/: index.html
src/: CMakeLists.txt
src/common/: config.cpp  json.cpp  sha256.cpp  time.cpp  types.cpp  yaml_config.cpp
src/data/: alpaca_data_client.cpp  alpaca_data_source.cpp  api_data_source.cpp  bar_builder.cpp  corporate_actions.cpp  csv_reader.cpp  data_source_factory.cpp  data_validation.cpp  db_client.cpp  db_csv_adapter.cpp  db_source.cpp  live_feed.cpp  memory_data_source.cpp  merged_iterator.cpp  metadata_data_source.cpp  mmap_data_source.cpp  mmap_reader.cpp  mmap_storage.cpp  mmap_writer.cpp  order_book_mmap.cpp  order_book_mmap_data_source.cpp  postgres_client.cpp  snapshot_access.cpp  symbol_metadata.cpp  tick_csv_reader.cpp  tick_mmap.cpp  tick_mmap_data_source.cpp  time_series_query.cpp  validation_utils.cpp  websocket_feed.cpp
src/engine/: audit_log.cpp  backtest_engine.cpp  backtest_results.cpp  backtest_runner.cpp  dashboard_snapshot.cpp  engine_factory.cpp  event_generator.cpp  event_loop.cpp  execution_pipeline.cpp  market_data_cache.cpp  order.cpp  order_book_cache.cpp  order_manager.cpp  order_routing.cpp  parity_checker.cpp  portfolio.cpp  regime_tracker.cpp  replay_journal.cpp  timer_service.cpp
src/execution/: basic_execution_model.cpp  commission.cpp  execution_factory.cpp  fill_simulator.cpp  latency_model.cpp  market_impact.cpp  order_book_execution_model.cpp  slippage.cpp  transaction_cost.cpp
src/live/: alpaca_adapter.cpp  audit_log.cpp  binance_adapter.cpp  event_bus.cpp  execution_quality.cpp  ib_adapter.cpp  ib_bid_compat.cpp  live_engine.cpp  live_order_manager.cpp  mq_adapter.cpp  mq_codec.cpp  prometheus_exporter.cpp  secret_hygiene.cpp  types.cpp
src/metrics/: attribution.cpp  drawdown.cpp  live_performance.cpp  metrics_tracker.cpp  performance.cpp  performance_calculator.cpp  performance_metrics.cpp  regime_attribution.cpp  report.cpp  report_writer.cpp  transition_metrics.cpp
src/plugins/: hooks.cpp  registry.cpp
src/regime/: constant_detector.cpp  ensemble.cpp  features.cpp  hmm.cpp  regime_factory.cpp  state_manager.cpp
src/risk/: position_sizer.cpp  risk_factory.cpp  risk_limits.cpp  stop_loss.cpp
src/strategy/: context.cpp  strategy_factory.cpp  strategy_manager.cpp
src/strategy/strategies/: buy_and_hold.cpp  harmonic_pattern.cpp  (+3 more)
src/tools/: alpaca_fetch_main.cpp  backtest_controls_demo.cpp  live_main.cpp  live_validation_main.cpp  mmap_builder.cpp  parity_check_main.cpp  replay_journal_main.cpp  strategy_tester_main.cpp
src/walkforward/: optimizer.cpp
tests/: CMakeLists.txt
tests/fixtures/: TEST.csv  TEST_actions.csv  config_hmm_ensemble.yaml
tests/live/: run_paper_smoke.sh  run_paper_validation.sh
tests/performance/: bench_allocator_rollout.cpp  bench_data_loading.cpp  bench_event_processing.cpp
tests/plugins/: test_dynamic_plugin.cpp
tests/python/: check_numpy.py  check_pytest.py  test_bindings_smoke.py
tests/unit/: temp_path_guard.h  test_backtest_accounting.cpp  test_backtest_hooks.cpp  test_backtest_parallel.cpp  test_backtest_results.cpp  test_bar_builder.cpp  test_broker_adapter_capabilities.cpp  test_corporate_actions.cpp  test_corporate_actions_csv.cpp  test_corporate_actions_dividend_csv.cpp  test_corporate_actions_symbol_change_csv.cpp  test_corporate_actions_symbol_change_memory.cpp  test_csv_normalization.cpp  test_data_validation.cpp  test_db_csv_adapter.cpp  test_dynamic_plugin_loading.cpp  test_engine_factory_smoke.cpp  test_ensemble_detector.cpp  test_event_bus.cpp  test_event_generator_ordering.cpp  test_event_generator_system_events.cpp  test_event_queue.cpp  test_execution_quality.cpp  test_execution_resting.cpp  test_execution_tif.cpp  test_hmm_baum_welch.cpp  test_hmm_features.cpp  test_hmm_normalization.cpp  test_hmm_persistence.cpp  test_live_engine_integration.cpp  test_live_order_reconcile.cpp  test_live_performance.cpp  test_market_impact.cpp  test_memory.cpp  test_merged_iterator.cpp  test_mmap_writer.cpp  test_order_book_execution.cpp  test_order_routing.cpp  test_order_tif.cpp  test_parity_checker.cpp  (+25 more)
(+464 files in other folders)
