[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.11", "numpy>=1.24"]
build-backend = "scikit_build_core.build"

[project]
name = "regimeflow"
version = "1.0.9"
description = "Regime-aware quantitative backtesting and research bindings for the RegimeFlow C++ engine"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Gregorian Rayne", email = "gregorianrayne09@gmail.com"}
]
maintainers = [
    {name = "Gregorian Rayne", email = "gregorianrayne09@gmail.com"}
]
keywords = [
    "quantitative-finance",
    "backtesting",
    "algorithmic-trading",
    "regime-detection",
    "walk-forward-optimization",
    "execution-modeling",
    "pybind11",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1",
]
viz = [
    "matplotlib>=3.7",
    "plotly>=5.0",
    "dash>=2.0",
    "flask-sock>=0.7",
    "gunicorn>=22.0",
    "python-dotenv>=1.0",
]
full = [
    "regimeflow[dev,viz]",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/gregorian-09/regime-flow"
Documentation = "https://gregorian-09.github.io/regime-flow/"
Repository = "https://github.com/gregorian-09/regime-flow"
Issues = "https://github.com/gregorian-09/regime-flow/issues"

[project.scripts]
regimeflow-backtest = "regimeflow.cli:main"

[tool.scikit-build]
cmake.args = [
    "-DBUILD_PYTHON_BINDINGS=ON",
    "-DBUILD_TESTS=OFF",
    "-DBUILD_BENCHMARKS=OFF",
    "-DENABLE_IBAPI=OFF",
    "-DENABLE_POSTGRES=OFF",
    "-DENABLE_CURL=OFF",
    "-DENABLE_OPENSSL=OFF",
    "-DENABLE_ZMQ=OFF",
    "-DENABLE_REDIS=OFF",
    "-DENABLE_KAFKA=OFF",
]
cmake.source-dir = ".."
wheel.packages = ["regimeflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "python_native: tests that require native RegimeFlow bindings",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "B", "A"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
